# AIMemory

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
aimemory/: cli.py  main.py
aimemory/admin/: auth.py  routes.py
aimemory/api/: deps.py  routes.py
aimemory/core/: config.py  logging.py  security.py
aimemory/db/: session.py
aimemory/models/: __init__.py  ai_chat.py  ai_memory_review.py  api_key.py  embedding_job.py  llm_provider_config.py  memory.py  memory_agent.py  memory_attachment.py  memory_category.py  memory_device.py  request_log.py  search_stopword.py  user.py
aimemory/repositories/: memories.py  memory_agents.py  memory_categories.py  request_logs.py  search_stopwords.py
aimemory/schemas/: memory.py
aimemory/services/: ai_chat.py  ai_crypto.py  ai_memory_review.py  attachments.py  category_analysis.py  embedding.py  memory_policy.py  openai_compatible.py  query_analysis.py  text.py
aimemory/worker/: celery_app.py  tasks.py
alembic/: env.py
alembic/versions/: 20260529_0001_initial.py  20260530_0002_disable_embedding.py  20260530_0003_memory_attachments.py  20260530_0004_request_logs.py  20260530_0005_request_log_response_summary.py  20260530_0006_search_stopwords.py  20260530_0007_memory_categories.py  20260531_0008_ai_memory_review.py  20260531_0009_ai_chat.py  20260531_0010_query_analysis.py  20260531_0011_review_prompt_injection.py  20260602_0012_entertainment_category_hints.py  20260602_0013_memory_agents_devices.py  20260603_0014_unify_agent_ids.py  20260603_0015_fine_grained_categories.py  20260603_0016_fine_category_priority_fix.py  20260603_0017_character_category_hints.py  20260610_0018_ai_chat_sql_permissions.py
clients/openclaw-aimemory/: README.md  (+6 more)
examples/: AI_MEMORY_USAGE.md  aimemory_client.py
tests/: test_admin_auth.py  test_ai_chat.py  test_ai_memory_review.py  test_attachments.py  test_category_analysis.py  test_embedding.py  test_logging.py  test_memory_context_api.py  test_memory_dedupe.py  test_query_analysis.py  test_schemas.py  test_security.py  test_text.py
(+22 files in other folders)
