[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aimemory"
version = "0.1.0"
description = "A high-concurrency memory service for AI agents."
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "alembic>=1.13.2",
    "fastapi>=0.115.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.4",
    "numpy<2; python_version < '3.13'",
    "pgvector>=0.3.2",
    "psycopg[binary]>=3.2.1",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.30",
    "typer>=0.12.3",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
aimemory = "aimemory.cli:app"

[tool.setuptools.packages.find]
include = ["aimemory*"]

[tool.setuptools.package-data]
"aimemory.admin" = ["templates/*.html", "static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "integration: tests requiring PostgreSQL/Redis or external services",
]
